Added new entities and made connections between them and existing ones. Implemented all endpoint /events and fixed some previous errors
